--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,8 +43,8 @@ jobs:
         run: |
           mkdir dist/
           unzip macOS-latest/macOS-latest.zip
-          ls -ls macOS-latest/
           mv macOS-latest/**/* dist/
+          ls -ls dist/
       - name: Download InstallBuilder
         run: |
           wget https://clients.bitrock.com/installbuilder/installbuilder-enterprise-19.10.0-linux-x64-installer.run
