--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [macOS-latest, windows-latest]
+        os: [macOS-latest, windows-latest, ubuntu-latest]
     steps:
       - uses: actions/checkout@master
       - uses: actions/setup-node@master
@@ -39,12 +39,19 @@ jobs:
       - uses: actions/download-artifact@master
         with:
           name: macOS-latest
+      - uses: actions/download-artifact@master
+        with:
+          name: windows-latest
       - name: Unzip MacOS
         run: |
           mkdir dist/
           unzip macOS-latest/macOS-latest.zip
           mv macOS-latest/* dist/
           ls -ls dist/
+      - name: Unzip Windows
+        run: |
+          unzip windows-latest/windows-latest.zip
+          mv windows-latest/** dist/
       - name: Download InstallBuilder
         run: |
           wget https://clients.bitrock.com/installbuilder/installbuilder-enterprise-19.10.0-linux-x64-installer.run
@@ -70,15 +77,6 @@ jobs:
         with:
           name: PreMiD-darwin-x64
           path: PreMiD-darwin-x64.zip
-      - uses: actions/download-artifact@master
-        with:
-          name: windows-latest
-      - name: Unzip Windows
-        run: |
-          rm -r dist/
-          mkdir dist
-          unzip windows-latest/windows-latest.zip
-          mv windows-latest/** dist/
       - name: Create installer (Windows 64bit)
         run: |
           node util/prepare PreMiD-win32-x64
