--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@types/electron-packager": "14.0.0",
     "@types/fs-extra": "8.0.1",
     "@types/ini": "1.3.30",
-    "@types/node": "^12.12.21",
+		"@types/node": "13.5.0",
     "@types/prompts": "2.0.3",
     "@types/request-promise-native": "1.0.17",
     "@types/rimraf": "2.0.3",
@@ -30,7 +30,7 @@
     "archiver": "3.1.1",
     "chalk": "3.0.0",
     "electron": "7.1.10",
-    "electron-packager": "14.1.1",
+		"electron-packager": "14.2.0",
     "fast-glob": "3.1.1",
     "fs-extra": "8.1.0",
     "ini": "1.3.5",
@@ -39,10 +39,10 @@
     "prompts": "2.3.0",
     "rimraf": "3.0.0",
     "source-map-support": "0.5.16",
-    "ssh2-sftp-client": "4.3.1",
+		"ssh2-sftp-client": "5.0.2",
     "typescript": "3.7.5",
-    "unzipper": "^0.10.5",
-    "yarn": "^1.21.1"
+		"unzipper": "0.10.7",
+		"yarn": "1.21.1"
   },
   "dependencies": {
     "auto-launch": "5.0.5",
