--- a/installer_assets/update.ini
+++ b/installer_assets/update.ini
@@ -1,6 +1,6 @@
 [Update]
 
-url=https://api.premid.app/app/update/64bit/
-version_id= ?
+url=https://api.premid.app/app/update/
+version_id=?
 check_for_updates=1
-update_download_location=${installer_directory}/update
+update_download_location=${installer_directory}
