--- a/package.json
+++ b/package.json
@@ -1,54 +1,55 @@
 {
-  "name": "premid",
-  "productName": "PreMiD",
-  "description": "Discord Rich Presence for websites.",
-  "version": "2.0.5",
-  "repository": "https://github.com/PreMiD/PreMiD",
-  "scripts": {
-    "init": "tsc && tsc pkg util/prepare util/zip && devScript --copyOnly",
-    "start": "electron dist/app/.",
-    "dev": "devScript",
-    "pkg": "rimraf dist && tsc && devScript --copyOnly && cd dist/app/ && yarn && cd ../../ && node pkg",
-    "deploy": "tsc .github/deploy && cd .github && node deploy.js"
-  },
-  "license": "MIT",
-  "devDependencies": {
-    "@timeraa/devscript": "Timeraa/DevScript",
-    "@types/archiver": "3.0.0",
-    "@types/auto-launch": "5.0.1",
-    "@types/discord-rpc": "3.0.2",
-    "@types/electron-packager": "14.0.0",
-    "@types/fs-extra": "8.0.1",
-    "@types/ini": "1.3.30",
+	"name": "premid",
+	"productName": "PreMiD",
+	"description": "Discord Rich Presence for websites.",
+	"version": "2.0.6",
+	"repository": "https://github.com/PreMiD/PreMiD",
+	"scripts": {
+		"init": "tsc --skipLibCheck && tsc pkg util/prepare util/zip && devScript --copyOnly",
+		"start": "electron dist/app/.",
+		"dev": "devScript",
+		"pkg": "rimraf dist && tsc --skipLibCheck && devScript --copyOnly && cd dist/app/ && yarn && cd ../../ && node pkg",
+		"deploy": "tsc --skipLibCheck .github/deploy && cd .github && node deploy.js"
+	},
+	"license": "MIT",
+	"devDependencies": {
+		"@timeraa/devscript": "Timeraa/DevScript",
+		"@types/archiver": "3.0.0",
+		"@types/auto-launch": "5.0.1",
+		"@types/discord-rpc": "3.0.2",
+		"@types/electron-packager": "14.0.0",
+		"@types/fs-extra": "8.0.1",
+		"@types/ini": "1.3.30",
 		"@types/node": "13.5.0",
-    "@types/prompts": "2.0.3",
-    "@types/request-promise-native": "1.0.17",
-    "@types/rimraf": "2.0.3",
-    "@types/socket.io": "2.1.4",
-    "@types/ssh2-sftp-client": "4.1.2",
-    "@types/unzipper": "^0.10.1",
-    "archiver": "3.1.1",
-    "chalk": "3.0.0",
-    "electron": "7.1.10",
+		"@types/prompts": "2.0.3",
+		"@types/request-promise-native": "1.0.17",
+		"@types/rimraf": "2.0.3",
+		"@types/socket.io": "2.1.4",
+		"@types/ssh2-sftp-client": "4.1.2",
+		"@types/unzipper": "^0.10.1",
+		"archiver": "3.1.1",
+		"chalk": "3.0.0",
+		"electron": "7.1.10",
 		"electron-packager": "14.2.0",
-    "fast-glob": "3.1.1",
-    "fs-extra": "8.1.0",
-    "ini": "1.3.5",
-    "nodemon": "2.0.2",
-    "ora": "4.0.3",
-    "prompts": "2.3.0",
-    "rimraf": "3.0.0",
-    "source-map-support": "0.5.16",
+		"fast-glob": "3.1.1",
+		"fs-extra": "8.1.0",
+		"ini": "1.3.5",
+		"nodemon": "2.0.2",
+		"ora": "4.0.3",
+		"prompts": "2.3.0",
+		"rimraf": "3.0.0",
+		"source-map-support": "0.5.16",
 		"ssh2-sftp-client": "5.0.2",
-    "typescript": "3.7.5",
+		"typescript": "3.7.5",
 		"unzipper": "0.10.7",
 		"yarn": "1.21.1"
-  },
-  "dependencies": {
-    "auto-launch": "5.0.5",
-    "discord-rpc": "github:discordjs/RPC",
-    "electron-store": "5.1.0",
-    "socket.io": "2.3.0",
-    "sudo-prompt": "9.1.1"
-  }
+	},
+	"dependencies": {
+		"auto-launch": "5.0.5",
+		"axios": "0.19.2",
+		"discord-rpc": "github:discordjs/RPC",
+		"electron-store": "5.1.0",
+		"socket.io": "2.3.0",
+		"sudo-prompt": "9.1.1"
+	}
 }
