--- a/package.json
+++ b/package.json
@@ -44,11 +44,12 @@
 		"yarn": "1.21.1"
 	},
 	"dependencies": {
-		"source-map-support": "0.5.16",
 		"auto-launch": "5.0.5",
 		"axios": "0.19.2",
+		"chokidar": "3.3.1",
 		"discord-rpc": "github:discordjs/RPC",
 		"electron-store": "5.1.0",
-		"socket.io": "2.3.0"
+		"socket.io": "2.3.0",
+		"source-map-support": "0.5.16"
 	}
 }
