--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
 	"name": "premid",
 	"productName": "PreMiD",
-	"description": "Discord Rich Presence for websites.",
-	"version": "2.1.1",
+	"description": "Discord Rich Presence for web services.",
+	"version": "2.1.2",
 	"repository": "https://github.com/PreMiD/PreMiD",
 	"scripts": {
 		"init": "tsc --skipLibCheck && tsc pkg util/prepare util/zip && devScript --copyOnly",
@@ -25,7 +25,7 @@
 		"@types/request-promise-native": "1.0.17",
 		"@types/rimraf": "2.0.3",
 		"@types/socket.io": "2.1.4",
-		"@types/ssh2-sftp-client": "4.1.2",
+		"@types/ssh2-sftp-client": "4.1.3",
 		"@types/unzipper": "^0.10.1",
 		"archiver": "3.1.1",
 		"chalk": "3.0.0",
@@ -39,8 +39,8 @@
 		"rimraf": "3.0.1",
 		"ssh2-sftp-client": "5.0.2",
 		"typescript": "3.7.5",
-		"unzipper": "0.10.7",
-		"yarn": "1.21.1"
+		"unzipper": "0.10.8",
+		"yarn": "1.22.0"
 	},
 	"dependencies": {
 		"auto-launch": "5.0.5",
