--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
 		"yarn": "1.22.4"
 	},
 	"dependencies": {
+		"@sentry/electron": "1.3.0",
 		"auto-launch": "5.0.5",
 		"axios": "0.19.2",
 		"chokidar": "3.3.1",
