⚡ Basic PaaS™ Core

--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,7 @@
 node_modules
-out
 dist
-tmp
-
-.vscode
-.env
-.yarn/*
-!.yarn/releases
-!.yarn/plugins
-.pnp.*
-
-src/package-lock.json
-src/package.json
-src/update.ini
-
-*.exe
-*.app
 *.xml.backup
 *.js
+*.exe
+*.zip
+tmp
