--- a/package.json
+++ b/package.json
@@ -1,55 +1,37 @@
 {
-	"name": "premid",
-	"productName": "PreMiD",
-	"description": "Discord Rich Presence for web services.",
-	"version": "2.1.3",
-	"repository": "https://github.com/PreMiD/PreMiD",
+	"displayName": "PreMiD",
+	"author": "Timeraa",
+	"license": "MPL-2.0",
+	"version": "2.2.0",
+	"releaseType": "alpha",
 	"scripts": {
-		"init": "tsc --skipLibCheck && tsc pkg util/prepare util/zip && devScript --copyOnly",
-		"start": "devScript --copyOnly && electron dist/app/.",
-		"dev": "nodemon --exec yarn start -S --watch dist/app -e .js",
-		"pkg": "rimraf dist && tsc --skipLibCheck && devScript --copyOnly && cd dist/app/ && yarn && cd ../../ && node pkg",
-		"deploy": "tsc --skipLibCheck .github/deploy && cd .github && node deploy.js"
-	},
-	"license": "MIT",
-	"devDependencies": {
-		"@timeraa/devscript": "Timeraa/DevScript",
-		"@types/archiver": "3.1.0",
-		"@types/auto-launch": "5.0.1",
-		"@types/discord-rpc": "3.0.4",
-		"@types/electron-packager": "14.0.0",
-		"@types/fs-extra": "8.1.0",
-		"@types/ini": "1.3.30",
-		"@types/node": "13.13.5",
-		"@types/prompts": "2.0.8",
-		"@types/request-promise-native": "1.0.17",
-		"@types/rimraf": "3.0.0",
-		"@types/socket.io": "2.1.5",
-		"@types/ssh2-sftp-client": "4.1.3",
-		"@types/unzipper": "^0.10.3",
-		"archiver": "4.0.1",
-		"chalk": "4.0.0",
-		"electron": "8.2.5",
-		"electron-packager": "14.2.1",
-		"fast-glob": "3.2.2",
-		"fs-extra": "9.0.0",
-		"nodemon": "2.0.4",
-		"ora": "4.0.4",
-		"prompts": "2.3.2",
-		"rimraf": "3.0.2",
-		"ssh2-sftp-client": "5.1.2",
-		"typescript": "3.8.3",
-		"unzipper": "0.10.11",
-		"yarn": "1.22.4"
+		"dev": "devScript",
+		"start": "cd dist && node master",
+		"build": "rimraf dist && tsc --skipLibCheck && devScript --copyOnly && tsc build.ts && node build.js"
 	},
 	"dependencies": {
-		"@sentry/electron": "1.3.0",
-		"auto-launch": "5.0.5",
 		"axios": "0.19.2",
-		"chokidar": "3.4.0",
-		"discord-rpc": "github:discordjs/RPC",
-		"electron-store": "5.1.1",
+		"chalk": "4.0.0",
+		"discord-rpc": "3.1.1",
+		"fast-glob": "3.2.2",
+		"node-windows": "1.0.0-beta.1",
 		"socket.io": "2.3.0",
-		"source-map-support": "^0.5.19"
+		"source-map-support": "0.5.19",
+		"unzipper": "0.10.11"
+	},
+	"devDependencies": {
+		"@types/archiver": "^3.1.0",
+		"@types/chalk": "^2.2.0",
+		"@types/discord-rpc": "^3.0.3",
+		"@types/fs-extra": "^8.1.0",
+		"@types/node": "^14.0.1",
+		"@types/node-windows": "^0.1.0",
+		"@types/rimraf": "^3.0.0",
+		"@types/socket.io": "^2.1.4",
+		"@types/unzipper": "^0.10.3",
+		"archiver": "^4.0.1",
+		"fs-extra": "9.0.0",
+		"rcedit": "^2.1.1",
+		"rimraf": "^3.0.2"
 	}
 }
