--- a/package.json
+++ b/package.json
@@ -13,11 +13,9 @@
 	},
 	"license": "MIT",
 	"devDependencies": {
-		"@timeraa/devscript": "Timeraa/DevScript",
 		"@types/archiver": "3.1.1",
 		"@types/auto-launch": "5.0.1",
 		"@types/discord-rpc": "3.0.4",
-		"@types/electron-packager": "15.0.1",
 		"@types/fs-extra": "9.0.1",
 		"@types/ini": "1.3.30",
 		"@types/node": "14.11.8",
@@ -38,6 +36,7 @@
 		"prompts": "2.3.2",
 		"rimraf": "3.0.2",
 		"ssh2-sftp-client": "5.3.1",
+		"ts-devscript": "^1.0.8",
 		"typescript": "4.0.3",
 		"unzipper": "0.10.11",
 		"yarn": "1.22.10"
