--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,15 +42,15 @@ jobs:
       - uses: actions/setup-node@master
       - name: Install dependencies
         run: |
-          npm i
-          npm i -g typescript
+          sudo npm i
+          sudo npm i -g typescript
       - name: Download InstallBuilder
         run: |
-          wget https://clients.bitrock.com/installbuilder/installbuilder-enterprise-20.3.0-linux-x64-installer.run
-          chmod u+x installbuilder-enterprise-20.3.0-linux-x64-installer.run
+          wget https://clients.bitrock.com/installbuilder/installbuilder-enterprise-20.7.0-linux-x64-installer.run
+          chmod u+x installbuilder-enterprise-20.7.0-linux-x64-installer.run
       - name: Install InstallBuilder
         run: |
-          ./installbuilder-enterprise-20.3.0-linux-x64-installer.run --installer-language en --prefix ./installbuilder --mode unattended
+          ./installbuilder-enterprise-20.7.0-linux-x64-installer.run --installer-language en --prefix ./installbuilder --mode unattended
           echo "${{ secrets.IBLICENSE }}" > ./installbuilder/license.xml
       - name: Prepare Upgrade Installer
         run: |
