--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 		"pkg": "rimraf dist && tsc --skipLibCheck && devScript --copyOnly && cd dist/app/ && yarn && cd ../../ && node pkg",
 		"deploy": "tsc --skipLibCheck .github/deploy && cd .github && node deploy.js"
 	},
-	"license": "MIT",
+	"license": "MPL-2.0",
 	"devDependencies": {
 		"@types/archiver": "3.1.1",
 		"@types/auto-launch": "5.0.1",
