--- a/package.json
+++ b/package.json
@@ -6,49 +6,52 @@
 	"repository": "https://github.com/PreMiD/PreMiD",
 	"scripts": {
 		"init": "tsc --skipLibCheck && tsc pkg util/prepare util/zip && devScript --copyOnly",
-		"start": "devScript --copyOnly && electron dist/app/.",
-		"dev": "nodemon --exec yarn start -S --watch dist/app -e .js",
+		"start": "electron dist/app/.",
+		"dev": "devscript --depCheck",
 		"pkg": "rimraf dist && tsc --skipLibCheck && devScript --copyOnly && cd dist/app/ && yarn && cd ../../ && node pkg",
 		"deploy": "tsc --skipLibCheck .github/deploy && cd .github && node deploy.js"
 	},
 	"license": "MPL-2.0",
 	"devDependencies": {
-		"@types/archiver": "3.1.1",
+		"@types/archiver": "5.1.0",
 		"@types/auto-launch": "5.0.1",
 		"@types/discord-rpc": "3.0.4",
-		"@types/fs-extra": "9.0.3",
+		"@types/fs-extra": "9.0.6",
 		"@types/ini": "1.3.30",
-		"@types/node": "14.11.10",
+		"@types/node": "14.14.22",
 		"@types/prompts": "2.0.9",
 		"@types/request-promise-native": "1.0.17",
 		"@types/rimraf": "3.0.0",
-		"@types/socket.io": "2.1.11",
-		"@types/ssh2-sftp-client": "5.3.0",
+		"@types/socket.io": "2.1.13",
+		"@types/ssh2-sftp-client": "5.3.1",
 		"@types/unzipper": "^0.10.3",
-		"archiver": "5.0.2",
+		"archiver": "5.2.0",
 		"chalk": "4.1.0",
-		"electron": "10.1.5",
-		"electron-packager": "15.1.0",
-		"fast-glob": "3.2.4",
-		"fs-extra": "9.0.1",
-		"nodemon": "2.0.6",
-		"ora": "5.1.0",
-		"prompts": "2.3.2",
+		"electron": "11.2.2",
+		"electron-packager": "15.2.0",
+		"fast-glob": "3.2.5",
+		"fs-extra": "9.1.0",
+		"nodemon": "2.0.7",
+		"ora": "5.3.0",
+		"prompts": "2.4.0",
 		"rimraf": "3.0.2",
-		"ssh2-sftp-client": "5.3.1",
-		"ts-devscript": "^1.0.8",
-		"typescript": "4.0.5",
+		"ssh2-sftp-client": "6.0.1",
+		"ts-devscript": "^3.0.3",
+		"typescript": "4.1.3",
 		"unzipper": "0.10.11",
 		"yarn": "1.22.10"
 	},
 	"dependencies": {
-		"@sentry/electron": "2.0.4",
+		"@sentry/electron": "^2.2.0",
 		"auto-launch": "5.0.5",
-		"axios": "0.20.0",
-		"chokidar": "3.4.3",
+		"axios": "0.21.1",
+		"chokidar": "3.5.1",
 		"discord-rpc": "github:discordjs/RPC",
-		"electron-store": "6.0.1",
+		"electron-store": "7.0.1",
 		"socket.io": "2.3.0",
 		"source-map-support": "^0.5.19"
+	},
+	"devScript": {
+		"out": "dist/app"
 	}
 }
