--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
 	"name": "premid",
 	"productName": "PreMiD",
 	"description": "Discord Rich Presence for web services.",
-	"version": "2.1.4",
+	"version": "2.2.0",
 	"repository": "https://github.com/PreMiD/PreMiD",
 	"scripts": {
 		"init": "tsc --skipLibCheck && tsc pkg util/prepare util/zip && devScript --copyOnly",
-		"start": "electron dist/app/.",
+		"start": "electron dist/app/. --unhandled-rejections=strict",
 		"dev": "devscript --depCheck",
 		"pkg": "rimraf dist && tsc --skipLibCheck && devScript --copyOnly && cd dist/app/ && yarn && cd ../../ && node pkg",
 		"deploy": "tsc --skipLibCheck .github/deploy && cd .github && node deploy.js"
@@ -16,7 +16,7 @@
 		"@types/archiver": "5.1.0",
 		"@types/auto-launch": "5.0.1",
 		"@types/discord-rpc": "3.0.4",
-		"@types/fs-extra": "9.0.6",
+		"@types/fs-extra": "9.0.7",
 		"@types/ini": "1.3.30",
 		"@types/node": "14.14.31",
 		"@types/prompts": "2.0.9",
@@ -27,7 +27,7 @@
 		"@types/unzipper": "^0.10.3",
 		"archiver": "5.2.0",
 		"chalk": "4.1.0",
-		"electron": "11.2.3",
+		"electron": "11.3.0",
 		"electron-packager": "15.2.0",
 		"fast-glob": "3.2.5",
 		"fs-extra": "9.1.0",
@@ -47,7 +47,7 @@
 		"chokidar": "3.5.1",
 		"discord-rpc": "github:discordjs/RPC",
 		"electron-store": "7.0.2",
-		"socket.io": "2.3.0",
+		"socket.io": "3.1.1",
 		"source-map-support": "^0.5.19"
 	},
 	"devScript": {
