--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,22 +1,7 @@
 {
+	"extends": "./tsconfig.base.json",
 	"compilerOptions": {
-		"module": "commonjs",
-		"target": "es2018",
-		"moduleResolution": "node",
-		"inlineSourceMap": true,
-		"outDir": "dist/app",
-		"removeComments": true,
-		"esModuleInterop": true,
-		"skipLibCheck": true,
-		"noUnusedParameters": true,
-		"noUnusedLocals": true
-	},
-	"include": ["src/**/*"],
-	"exclude": [
-		"**/node_modules/",
-		"pkg.ts",
-		"util/**/*",
-		"installer_assets/builder.ts",
-		".github/uploadFile.ts"
-	]
+		"noEmit": true,
+		"types": ["vitest"]
+	}
 }
