--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 	},
 	"license": "MPL-2.0",
 	"devDependencies": {
+		"@commitlint/cli": "^18.6.0",
 		"@recodive/configs": "^1.7.1",
 		"@recodive/eslint-config": "^1.7.1",
 		"@rushstack/eslint-patch": "^1.7.2",
