--- a/apps/pd/tsconfig.json
+++ b/apps/pd/tsconfig.json
@@ -1,7 +1,8 @@
 {
 	"extends": "./tsconfig.app.json",
-	"include": ["environment.d.ts"],
+	"include": ["environment.d.ts", "src"],
 	"compilerOptions": {
-		"noEmit": true
+		"noEmit": true,
+		"types": ["@types/node"]
 	}
 }
