--- a/apps/pd/package.json
+++ b/apps/pd/package.json
@@ -13,13 +13,20 @@
 	"license": "MPL-2.0",
 	"dependencies": {
 		"@fastify/cors": "^9.0.1",
+		"@fastify/multipart": "^8.1.0",
 		"@fastify/rate-limit": "^9.1.0",
 		"@keyv/redis": "^2.8.4",
 		"fastify": "^4.26.0",
+		"file-type": "^19.0.0",
 		"got": "^14.2.0",
 		"ioredis": "^5.3.2",
 		"ipaddr.js": "^2.1.0",
 		"keyv": "^4.5.4",
+		"mime-types": "^2.1.35",
 		"nanoid": "^5.0.5"
+	},
+	"devDependencies": {
+		"@types/mime-types": "^2.1.4",
+		"form-data": "^4.0.0"
 	}
 }
