--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
 	"license": "MPL-2.0",
 	"devDependencies": {
 		"@commitlint/cli": "^18.6.0",
-		"@recodive/configs": "^1.7.1",
-		"@recodive/eslint-config": "^1.7.1",
+		"@recodive/configs": "^1.7.5",
+		"@recodive/eslint-config": "^1.7.5",
 		"@rushstack/eslint-patch": "^1.7.2",
+		"@types/node": "^20.11.17",
 		"@vitest/coverage-v8": "^1.2.2",
 		"@vitest/ui": "^1.2.2",
 		"eslint": "^8.56.0",
