--- a/apps/pd/package.json
+++ b/apps/pd/package.json
@@ -4,6 +4,9 @@
 	"description": "A small service to shorten image urls to get around Discord's 256 character limit",
 	"main": "dist/index.js",
 	"type": "module",
+	"files": [
+		"dist"
+	],
 	"scripts": {
 		"start": "node --enable-source-maps .",
 		"dev": "node --watch --enable-source-maps .",
