--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -3,6 +3,9 @@
 	"references": [
 		{
 			"path": "./apps/pd/tsconfig.app.json"
+		},
+		{
+			"path": "./apps/schema-server/tsconfig.app.json"
 		}
 	]
 }
