--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -2,6 +2,7 @@ name: Build, Lint and Test
 on: [push, pull_request]
 jobs:
   build:
+    name: Build, Lint and Test
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repository
@@ -21,5 +22,33 @@ jobs:
         run: pnpm run build
       - name: Test
         run: pnpm test
-  #TODO: Add Docker Build Step
-  #build-docker:
+  build-docker:
+    name: Build Docker Images
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v4
+      - name: Setup QEMU
+        uses: docker/setup-qemu-action@v3
+      - name: Setup Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      - name: Build pd Docker Image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: ./apps/pd/Dockerfile
+          platforms: linux/amd64,linux/arm64
+          push: false
+          tags: pd
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+      - name: Build pd Docker Image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: ./apps/schema-server/Dockerfile
+          platforms: linux/amd64,linux/arm64
+          push: false
+          tags: schema-server
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
