ci: fix docker build

--- a/apps/schema-server/Dockerfile
+++ b/apps/schema-server/Dockerfile
@@ -2,15 +2,18 @@ FROM node:20-alpine as build
 
 WORKDIR /app
 
+RUN corepack enable
+
 COPY package.json pnpm-lock.yaml /app/
 
-RUN corepack enable && \
-  pnpm install --frozen-lockfile
+RUN --mount=type=cache,id=pnpm,target=/pnpm/store pnpm fetch --frozen-lockfile
 
 COPY . /app
 
+RUN pnpm install --frozen-lockfile --offline
+
 RUN pnpm --filter @premid/schema-server build && \
-  pnpm deploy --filter @premid/schema-server --prod deploy
+  pnpm deploy --filter @premid/schema-server deploy
 
 FROM node:20-alpine
 
