--- a/apps/pd/Dockerfile
+++ b/apps/pd/Dockerfile
@@ -2,12 +2,15 @@ FROM node:20-alpine as build
 
 WORKDIR /app
 
+RUN corepack enable
+
 COPY package.json pnpm-lock.yaml /app/
 
-RUN corepack enable && \
-  pnpm install --frozen-lockfile
+RUN --mount=type=cache,id=pnpm,target=/pnpm/store pnpm fetch --frozen-lockfile
 
 COPY . /app
+
+RUN pnpm install --frozen-lockfile --offline
 
 RUN pnpm --filter @premid/pd build && \
   pnpm deploy --filter @premid/pd deploy
