--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"@types/node": "^20.11.17",
 		"@vitest/coverage-v8": "^1.2.2",
 		"@vitest/ui": "^1.2.2",
+		"bumpp": "^9.3.0",
 		"eslint": "^8.56.0",
 		"husky": "^9.0.10",
 		"prettier": "^3.2.5",
