--- a/.github/workflows/cd-schemas.yaml
+++ b/.github/workflows/cd-schemas.yaml
@@ -2,15 +2,22 @@ name: Build schema-server
 on:
   push:
     tags:
-      - "schema-server-*"
+      - "schema-server-v*"
 jobs:
   build:
     name: Build schema-server
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v4
+
+      - name: Get package.json version
+        id: get_version
+        run: echo ::set-output name=version::$(node -p "require('./apps/schema-server/package.json').version")
+
       - name: Build Docker Image
         uses: premid/premid/.github/actions/build-docker@monorepo
         with:
           dockerfile: ./apps/schema-server/Dockerfile
           push: true
-          tags: ghcr.io/premid/schema-server:${{ github.ref }},ghcr.io/premid/schema-server:latest
+          tags: ghcr.io/premid/schema-server:${{ steps.get_version.outputs.version }},ghcr.io/premid/schema-server:latest
