--- a/.github/actions/build-docker/action.yaml
+++ b/.github/actions/build-docker/action.yaml
@@ -16,10 +16,20 @@ runs:
   steps:
     - name: Checkout Repository
       uses: actions/checkout@v4
+
     - name: Setup QEMU
       uses: docker/setup-qemu-action@v3
+
     - name: Setup Docker Buildx
       uses: docker/setup-buildx-action@v3
+
+    - name: Login to GitHub Container Registry
+      uses: docker/login-action@v3
+      with:
+        registry: ghcr.io
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
+
     - name: Build Docker Image
       uses: docker/build-push-action@v5
       with:
