--- a/.github/actions/build-and-push-docker/action.yaml
+++ b/.github/actions/build-and-push-docker/action.yaml
@@ -15,11 +15,11 @@ runs:
   using: "composite"
   steps:
     - name: Checkout Repository
-      uses: actions/checkout@v2
+      uses: actions/checkout@v4
 
     - name: Get package.json version
       id: get_version
-      run: echo ::set-output name=version::$(node -p "require('./${{ inputs.app }}/package.json').version")
+      run: echo ::set-output name=version::$(node -p "require('./apps/${{ inputs.app }}/package.json').version")
       shell: bash
 
     - name: Build and Push Docker Image
