--- a/.github/actions/build-docker/action.yaml
+++ b/.github/actions/build-docker/action.yaml
@@ -13,7 +13,7 @@ inputs:
     default: "false"
   token:
     description: "GitHub Token"
-    required: true
+    required: false
 runs:
   using: "composite"
   steps:
@@ -27,6 +27,7 @@ runs:
       uses: docker/setup-buildx-action@v3
 
     - name: Login to GitHub Container Registry
+      if: ${{ inputs.push == 'true' }}
       uses: docker/login-action@v3
       with:
         registry: ghcr.io
