--- a/.github/workflows/cd-website.yaml
+++ b/.github/workflows/cd-website.yaml
@@ -19,6 +19,7 @@ jobs:
           app: website
           token: ${{ secrets.GITHUB_TOKEN }}
   build-latest:
+    name: Build website (Latest)
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -34,7 +35,7 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
       - name: Set up tags
         id: vars
-        run: echo "SHA_TAG=ghcr.io/website:beta-${{ github.sha }}-${{ github.run_number }}" >> $GITHUB_ENV
+        run: echo "SHA_TAG=ghcr.io/${{ github.repository_owner }}/website:beta-${{ github.sha }}-${{ github.run_number }}" >> $GITHUB_ENV
       - name: Build and push
         uses: docker/build-push-action@v6
         with:
