--- a/.github/workflows/cd-website.yaml
+++ b/.github/workflows/cd-website.yaml
@@ -39,6 +39,7 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v6
         with:
+          context: ./apps/website
           file: ./apps/website/Dockerfile
           build-args: |
             GH_NPM_TOKEN=${{ secrets.GITHUB_TOKEN }}
