--- a/apps/pd/package.json
+++ b/apps/pd/package.json
@@ -30,6 +30,7 @@
 	},
 	"devDependencies": {
 		"@types/mime-types": "^2.1.4",
-		"form-data": "^4.0.0"
+		"form-data": "^4.0.0",
+		"typescript": "^5.3.3"
 	}
 }
