--- a/apps/schema-server/package.json
+++ b/apps/schema-server/package.json
@@ -19,5 +19,8 @@
 		"@fastify/helmet": "^11.1.1",
 		"fastify": "^4.26.0",
 		"globby": "^14.0.1"
+	},
+	"devDependencies": {
+		"typescript": "^5.3.3"
 	}
 }
