--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -13,6 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
+      max-parallel: 1
       matrix:
         target: [pd, schema-server, website]
     steps:
