--- a/apps/pd/package.json
+++ b/apps/pd/package.json
@@ -11,8 +11,7 @@
 	],
 	"scripts": {
 		"start": "node --enable-source-maps .",
-		"dev": "node --watch --enable-source-maps .",
-		"build": "tsc -p tsconfig.app.json"
+		"dev": "node --watch --enable-source-maps ."
 	},
 	"dependencies": {
 		"@fastify/cors": "^9.0.1",
@@ -30,7 +29,6 @@
 	},
 	"devDependencies": {
 		"@types/mime-types": "^2.1.4",
-		"form-data": "^4.0.0",
-		"typescript": "^5.3.3"
+		"form-data": "^4.0.0"
 	}
 }
