--- a/apps/schema-server/package.json
+++ b/apps/schema-server/package.json
@@ -12,15 +12,11 @@
 	],
 	"scripts": {
 		"start": "node --enable-source-maps .",
-		"dev": "node --watch --enable-source-maps .",
-		"build": "tsc -p tsconfig.app.json"
+		"dev": "node --watch --enable-source-maps ."
 	},
 	"dependencies": {
 		"@fastify/helmet": "^11.1.1",
 		"fastify": "^4.26.0",
 		"globby": "^14.0.1"
-	},
-	"devDependencies": {
-		"typescript": "^5.3.3"
 	}
 }
